--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,33 +23,31 @@ android {
     }
 }
 
-dependencies {
-    def lifecycle_version = "1.1.1"
-    def android_version = "27.1.1"
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$android_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.google.firebase:firebase-database:11.6.0'
     implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    implementation "com.android.support:design:$android_version"
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.orhanobut:hawk:2.0.1'
-
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
-
-    def room_version = "1.1.0" // or, for latest rc, use "1.1.1-rc1"
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-
-
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.0'
+    kapt "android.arch.persistence.room:compiler:1.1.0"
+    implementation 'com.frosquivel:magicalcamera:5.0.5'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.google.android.gms:play-services-maps:11.6.0'
+    implementation 'com.google.android.gms:play-services-location:11.6.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
